# marketing-pipeline

./: .env.example  .gitignore  README.md  projects.yml  pyproject.toml  surfaces.yml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: daily.yml  launch.yml  test.yml
content/drafts/konid/devto/: girlfriend-language_2026-04-12.md
content/drafts/konid/mastodon/: girlfriend-language_2026-04-12.md
content/posted/: bluesky_2026-04-12.md  hashnode_2026-04-12.md  manifest.yml
defaults/: projects.yml  surfaces.yml
hooks/: hooks.json
hooks-handlers/: session-start.sh
pipeline/: __init__.py  antislop.py  cli.py  config.py  drafter.py  image_check.py  lister.py  metrics.py  onboard.py  registry.py  report.py  setup.py  surfaces.py
pipeline/fetch/: __init__.py  kopi.py
pipeline/publish/: __init__.py  bluesky.py  devto.py  hashnode.py  mastodon.py  pinterest.py  tailwind.py
prompts/: draft_post.md
reports/dry-run/: week-1-simulated.md
reports/konid/: listing-status.yml
reports/metrics/: 2026-04-12.yml
skills/cycle/: SKILL.md
skills/draft/: SKILL.md
skills/launch/: SKILL.md
skills/onboard/: SKILL.md
skills/post/: SKILL.md
skills/report/: SKILL.md
skills/setup/: SKILL.md
skills/status/: SKILL.md
tests/: test_antislop.py  test_config.py  test_lister.py  test_publishers.py  test_registry.py  test_surfaces.py
